<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="menu_settings">注册</string>
    <string name="tt_dialog_custom_input_note">输入备注</string>
    <string name="tt_activity_add_fri_note">备注</string>
    <string name="tt_fragment_contact_new_frirends">新的朋友</string>
    <string name="tt_item_find_refuse">拒绝</string>
    <string name="tt_item_find_accept">允许</string>
    <string name="pull_to_refresh">下拉刷新~</string>
    <string name="refreshing">正在更新&#8230;</string>
    <string name="release_to_refresh">释放立即更新~</string>
    <string name="pull_up_to_get_more">上拉获取更多</string>
    <string name="release_to_get_more">可以松手了</string>
    <string name="no_more">没有更多内容了哦</string>
    <string name="last_update">上次更新:</string>
    <string name="pull_to_refresh_pull_label">下拉刷新~</string>
    <string name="pull_to_refresh_release_label">释放立即刷新~</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_last_refresh">上次更新：</string>
    <string name="menu_group_chat_str">发起群聊</string>
    <string name="menu_delete_all_sesstion_str">删除会话</string>
    <string name="menu_status_str">设置个人状态</string>
    <string name="menu_find_str">查找联系人</string>
    <string name="menu_hide_un_fri_msg_str">屏蔽非好友信息</string>
    <string name="menu_accept_all_msg_str">接收所有信息</string>
    <string name="menu_add_str">添加</string>
    <string name="menu_find_all_contact_str">显示所有联系人</string>
    <string name="menu_find_available_contact_str">只显示在线联系人</string>
    <string name="menu_scan_str">扫一扫</string>
    <string name="menu_payment_str">付款</string>
    <string name="menu_notify_str">发送通知</string>
    <string name="menu_modify_password_str">修改密码</string>
    <string name="speaker_mode">扬声器模式</string>
    <string name="file_text">文件</string>
    <string name="load_data">正在加载数据....</string>
    <string name="load_login">正在登录</string>
    <string name="copy">复制</string>
    <string name="resend">重发</string>
    <string name="send_message">发送</string>
    <string name="send">发送</string>
    <string name="preview">预览</string>
    <string name="confirm">确定</string>
    <string name="exit">退出</string>
    <string name="thumb_remove">清理缓存</string>
    <string name="notify_setting">通知设置</string>
    <string name="thumb_remove_finish">清理完成</string>
    <string name="request_login_faild">请求登陆消息服务器失败</string>
    <string name="sdcard_unavaluable">请检查存储卡是否可用</string>
    <string name="image_path_unavaluable">图片路径无效</string>
    <string name="disconnected">连接已断开</string>
    <string name="chat">发信息</string>
    <string name="addFri">加为好友</string>
    <string name="contact_dept">部门</string>
    <string name="contact_conference">会议</string>
    <string name="top_left_back">返回</string>
    <string name="fri_detail">好友信息</string>
    <string name="dept_detail">部门成员</string>
    <string name="group_name_tip">群聊名称</string>
    <string name="chat_failed_search">未搜索到匹配的结果</string>
    <string name="save">保存</string>
    <string name="chat_detail">聊天详情</string>
    <string name="choose_contact">选择联系人</string>
    <string name="switch_login_server_title">输入登陆服务器地址</string>
    <string name="no_network">网络不给力</string>
    <string name="tt_activity_user_info_send">发信息</string>
    <string name="tt_activity_user_info_add_fri">加好友</string>
    <string name="tt_activity_user_info_tel">手机</string>
    <string name="tt_activity_user_info_email">邮箱</string>
    <string name="tt_activity_user_info_address">地址</string>
    <string name="tt_activity_user_info_ok">请求已发送</string>
    <string name="tt_activity_user_info_next">完成 </string>
    <string name="tt_activity_user_info_last">上一步</string>
    <string name="tt_activity_user_info_accept">接受</string>
    <string name="tt_sign">注册账户</string>
    <string name="tt_sign_input_account">输入账户</string>
    <string name="tt_sign_input_name">输入昵称</string>
    <string name="tt_sign_input_pwd1">输入密码</string>
    <string name="tt_sign_input_pwd2">确认密码</string>
    <string name="tt_sign_submit">提  交</string>
    <string name="tt_sign_wait">正在注册 </string>
    <string name="tt_sign_error">注册失败 </string>
    <string name="tt_sign_back">返回 </string>
    <string name="tt_my_info_name">昵称</string>
    <string name="tt_my_info_jid">jid</string>
    <string name="tt_my_info_email">email</string>
    <string name="tt_my_info_phone">电话</string>
    <string name="tt_my_info_address">住址</string>
    <string name="tt_my_info_save">保存</string>
    <string name="tt_my_info_hint">点击可以换头像哦</string>
    <string name="tt_my_info_detail">个人信息</string>
    <string name="tt_my_info_no_modify">你还没有做任何更改</string>
    <string name="tt_my_info_save_ok">保存成功</string>
    <string name="tt_my_info_save_no">失败</string>
    <string name="app_name">FaceWhat</string>
    <string name="message_image_desc">Message Image</string>
    <string name="tip_for_voice_forward">按住 说话</string>
    <string name="release_to_send_voice">松开 结束</string>
    <string name="photo_pop_pick_photo">从相册选择</string>
    <string name="photo_pop_take_photo">拍照</string>
    <string name="no_gallery">没有找到相册</string>
    <string name="no_sdcard">没有SD卡</string>
    <string name="no_available_dir">没用找到存储目录</string>
    <string name="disconnected_by_server">"服务器已断开连接！"</string>
    <string name="message_null">不能发送空内容哦！</string>
    <string name="take_photo_description">take photo</string>
    <string name="pick_photo_description">pick photo</string>
    <string name="network_has_disconnected">网络已经断开</string>
    <string name="message_send_failed">请检查网络</string>
    <string name="network_has_connected">网络已正常</string>
    <string name="image_download_failed">下载文件失败</string>
    <string name="send_good_url_btn_text">发送链接</string>
    <string name="audio_recorded_so_short">录音时间太短，请重新录制</string>
    <string name="take_photo_btn_text">照片</string>
    <string name="take_camera_btn_text">拍照</string>
    <string name="kick_tip">您已经被踢下线</string>
    <string name="goods_detail_title">我正在看:</string>
    <string name="goods_now_price_prefix">￥</string>
    <string name="goods_old_price_prefix">￥</string>
    <string name="history_divider_text">以上是历史信息</string>
    <string name="send_link">发送链接</string>
    <string name="write_audio_file_failed">录音文件写入失败</string>
    <string name="need_choose_images">请选择图片～</string>
    <string name="image_cannot_found">图片路径不存在，请选择其它图片！</string>
    <string name="not_found_album">没有找到可用的相册！</string>
    <string name="loading">加载中&#8230;</string>
    <string name="refresh_over">刷新完成</string>
    <string name="refresh">刷新</string>
    <string name="notfound_audio_file">该语音文件已丢失</string>
    <string name="audio_in_speeker">已经为您切换到扬声器模式</string>
    <string name="audio_in_call">已经为您切换到听筒模式</string>
    <string name="unavailable_image_file">该文件已损坏</string>
    <string name="block_chat">不能对话</string>
    <string name="unavailable_server">服务器开小差，请稍后重试～</string>
    <string name="i_know">我知道了</string>
    <string name="kick_off">该账号在其他设备登陆，您已被迫下线!</string>
    <string name="reconnect">重连</string>
    <string name="request_custom_service_failed">请求客服失败</string>
    <string name="invalid_detail_url">无效的详情链接,不能跳转哦～</string>
    <string name="invalid_order_url">无效的订单链接,不能跳转哦～</string>
    <string name="no_group_member">你可能已经不在该群中了!</string>
    <string name="default_emo">默认表情</string>
    <string name="yaya_emo">牙牙表情</string>
    <string name="call">呼叫</string>
    <string name="save_image">保存图片到手机</string>
    <string name="im_service_disconnected">无法连接到后台服务</string>
    <string name="main_chat">聊天</string>
    <string name="main_contact">联系人</string>
    <string name="main_innernet">通讯录</string>
    <string name="main_me_tab">我的</string>
    <string name="page_me">我</string>
    <string name="page_setting">设置</string>
    <string name="page_user_detail">详细资料</string>
    <string name="title_activity_login">登录IM</string>
    <string name="tt_login_prompt_name">用户名</string>
    <string name="tt_login_prompt_password">密码</string>
    <string name="tt_login_prompt_host">服务器</string>
    <string name="tt_login_action_sign_in_register"><b>登 录</b></string>
    <string name="tt_login_action_sign_in_short">进入</string>
    <string name="tt_login_action_forgot_password">Recover lost password</string>
    <string name="tt_login_progress_signing_in">正在登录</string>
    <string name="tt_login_error_invalid_email">用户名不合法</string>
    <string name="tt_login_error_invalid_password">亲，密码太短了</string>
    <string name="tt_login_error_incorrect_user">请检查用户名密码是否正确</string>
    <string name="tt_login_error_name_required">请输入用户名</string>
    <string name="tt_login_error_pwd_required">请输入密码</string>
    <string name="tt_login_invalid_account">登录失败,请重试</string>
    <string name="tt_login_invalid_network">请检查网络是否正常！</string>
    <string name="tt_login_login_timeout">登陆超时,请重试</string>
    <string name="tt_login_login_failed">登陆失败,请重试</string>
    <string name="tt_login_action_kickout">用户在其他客户端登录</string>
    <string name="tt_login_sign">前往注册</string>
    <string name="tt_login_switch_server">切换服务器</string>
    <string name="tt_login_save_pwd">保存密码</string>
    <string name="tt_login_auto_login">自动登录</string>
    <string name="desc_avatar">头像</string>
    <string name="contact_name">最近联系人</string>
    <string name="menu_undo">后退</string>
    <string name="menu_search">搜索</string>
    <string name="menu_users">用户</string>
    <string name="chat_title">FaceWhat</string>
    <string name="request_unread_msg_faild">请求未读消息失败</string>
    <string name="load_contacts_failed">数据请求失败,请重试</string>
    <string name="get_unread_msg_count_failed">获取未读消息计数失败</string>
    <string name="get_user_info_failed">获取用户信息失败</string>
    <string name="get_recent_contact_failed">当前联系人加载失败</string>
    <string name="network_was_disconnected">连接已经断开</string>
    <string name="no_recent_contact">你还没有联系人哦</string>
    <string name="no_recent_session">消息记录为空</string>
    <string name="add_fri_title">添加好友</string>
    <string name="add_fri_find_contact">找人</string>
    <string name="add_fri_find_group">找郡</string>
    <string name="add_fri_msg">输入联系人，群号</string>
    <string name="title_activity_chat">Chat</string>
    <string name="login_userName">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_login">登录</string>
    <string name="login_regest">注册</string>
    <string name="login_savePwd">保存密码</string>
    <string name="login_autoLogin">自动登录</string>
    <string name="login_serverName">服务器名</string>
    <string name="login_host">10.10.123.112</string>
    <string name="login_title_btn_showName">Chat</string>
    <string name="login_title_btn_regest">注册</string>
    <string name="regest_tel">手机号</string>
    <string name="regest_userAge">年龄</string>
    <string name="regest_userSex">性别</string>
    <string name="regest_men">男</string>
    <string name="regest_women">女</string>
    <string name="regest_secrecy">保密</string>
    <string name="regest_btn_regest">注册</string>
    <string name="regest_serverName">服务器名</string>
    <string name="regest_userName">用户名</string>
    <string name="regest_userPwd">密码</string>
    <string name="regest_userSurePwd">确认密码</string>
    <string name="regest_title_btn_showName">Chat</string>
    <string name="regest_title_btn_return">返回</string>
    <string name="main_message">消息</string>
    <string name="main_contact1">联系人</string>
    <string name="main_group">群</string>
    <string name="chat_send_btn">发送</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="createMul">创建会议</string>
    <string name="cancel">取消</string>
    <string name="all_select">全选</string>
    <string name="reverse_select">反选</string>
</resources>