<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MGIMInitAct" >

    <!-- Login form -->

    <FrameLayout
        android:id="@+id/tt_login_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/default_bk" >

        <LinearLayout
            android:id="@+id/tt_login_splash_page"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tt_login_imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/facewhat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tt_login_page"
            style="@style/LoginFormContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp" >

                <TextView
                    android:id="@+id/tt_login_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:text="@string/tt_login_sign"
                    android:textColor="@color/Blue"
                    android:visibility="gone"/>"

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"
                    android:src="@drawable/cartoon28" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <!-- android:focusableInTouchMode="true"取消自动获取焦点 -->

                <EditText
                    android:id="@+id/tt_login_accout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/tt_message_text_bg"
                    android:drawableLeft="@drawable/tt_login_user"
                    android:hint="@string/tt_login_prompt_name"
                    android:inputType="text|textPersonName|textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:text="zxl"
                    android:textColorHint="@color/login_hint_color"
                    android:textSize="15sp"
                    android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"/>

                <EditText
                    android:id="@+id/tt_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/tt_message_text_bg"
                    android:drawableLeft="@drawable/tt_login_pwd"
                    android:hint="@string/tt_login_prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/tt_login_action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:text="123"
                    android:textColorHint="@color/login_hint_color"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/tt_login_host"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/tt_message_text_bg"
                    android:drawableLeft="@drawable/tt_login_pwd"
                    android:hint="@string/tt_login_prompt_host"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/tt_login_action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:paddingLeft="15dp"
                    android:singleLine="true"
                    android:text="10.10.122.162"
                    android:textColorHint="@color/login_hint_color"
                    android:textSize="15sp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/tt_login_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/tt_default_btn_bk"
                    android:text="@string/tt_login_action_sign_in_register"
                    android:textColor="@android:color/white"
                    android:textSize="21sp" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/tt_login_save_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="5dp"
                        android:text="@string/tt_login_save_pwd"
                        android:textColor="@color/Black" />

                    <CheckBox
                        android:id="@+id/tt_login_auto_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="5dp"
                        android:text="@string/tt_login_auto_login"
                        android:textColor="@color/Black" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/half_transparent_light"
        android:visibility="gone"
        android:gravity="center"
        android:clickable="true"
        android:focusableInTouchMode="true">

        
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/tt_progressbar"
            android:indeterminateDuration="4000"/>
        
<!--          <TextView  -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:text="@string/load_login" -->
<!--             android:textColor="@color/Black"/> -->
    </LinearLayout>

</merge>